--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alurabook</title>
     <link rel="stylesheet" href="reset.css">
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Poppins:wght@300;400;500;700&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Poppins:wght@300;400;500;700&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css" />
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -48,10 +51,43 @@
 
     <section class="banner">
         <h2 class="banner__titulo">Já sabe por onde começar?</h2>
-        <p class="banner__texto">Encontre em nossa estante o que     precisa para seu desenvolvimento!</p>
+        <p class="banner__texto">Encontre em nossa estante o que precisa para seu desenvolvimento!</p>
         <input type="search" class="banner__pesquisa" placeholder="Qual será sua próxima leitura?">
     </section>
 
+    <section class="carrossel">
+        <h2 class="carrossel__titulo">Últimos lançamentos</h2>
+        <div class="swiper">
+            <!-- If we need pagination -->
+            <div class="swiper-pagination"></div>
+            <!-- Additional required wrapper -->
+            <div class="swiper-wrapper">
+                <!-- Slides -->
+                <div class="swiper-slide"><img src="img/Portugol.png" alt="Livro sobre lógica de programação"></div>
+                <div class="swiper-slide"><img src="img/Javascript.png" alt="Livro sobre JavaScript"></div>
+                <div class="swiper-slide"><img src="img/Liderança.png" alt="Livro sobre liderança em design"></div>
+                <div class="swiper-slide"><img src="img/Guia Front-end.png" alt="Livro sobre guia Front-end"></div>
+                <div class="swiper-slide"><img src="img/ApacheKafka.png" alt="Livro sobre apache kafka e spring boot">
+                </div>
+                <div class="swiper-slide"><img src="img/Acessibilidade.png" alt="Livro sobre acessibliade web"></div>
+            </div>
+            <!-- If we need navigation buttons -->
+            <div class="swiper-button-prev"></div>
+            <div class="swiper-button-next"></div>
+        </div>
+    </section>
+
+
+    <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
+    <script>
+         const swiper = new Swiper('.swiper', {
+            spaceBetween: 10,
+            slidesPerView: 3,  //<= O erro esta aqui
+            pagination: {
+            el: '.swiper-pagination',
+            type: 'bullets',}
+    });
+    </script>
 </body>
 
 </html>
