--- a/index.html
+++ b/index.html
@@ -75,18 +75,44 @@
             <div class="swiper-button-prev"></div>
             <div class="swiper-button-next"></div>
         </div>
+
+        <div class="card">
+            <!-- 1° linha -->
+            <div class="card__descricao">
+                <!-- 1° coluna -->
+                <div class="descricao">
+                    <h3 class="descricao__titulo">Talvez você também se interesse por...</h3>
+                    <h2 class="descricao__titulo-livro">Angular 11 e Firebase</h2>
+                    <p class="descricao__texto">Construindo uma aplicação integrada com a plataforma do Google.</p>
+                </div>
+                <!-- 2° coluna -->
+                <img class="descricao__imagem" src="img/Angular.png" alt="Icone do Angular">
+            </div>
+            <!-- 2° linha -->
+            <div class="card__botoes">
+                <!-- 1° coluna -->
+                <ul class="botoes">
+                    <li class="botoes__item"><img src="img/Favoritos.svg" alt="Favoritar livro"></li>
+                    <li class="botoes__item"><img src="img/Compras.svg" alt="Adicionar no carrinho de compras"></li>
+                </ul>
+                <a class="botoes__ancora"href="#">Saiba mais</a>
+            </div>
+
+        </div>
+
     </section>
 
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
     <script>
-         const swiper = new Swiper('.swiper', {
+        const swiper = new Swiper('.swiper', {
             spaceBetween: 10,
             slidesPerView: 3,  //<= O erro esta aqui
             pagination: {
-            el: '.swiper-pagination',
-            type: 'bullets',}
-    });
+                el: '.swiper-pagination',
+                type: 'bullets',
+            }
+        });
     </script>
 </body>
 
