Adicionando mais uma seção

--- a/index.html
+++ b/index.html
@@ -97,11 +97,56 @@
                 </ul>
                 <a class="botoes__ancora"href="#">Saiba mais</a>
             </div>
-
         </div>
 
     </section>
 
+
+    <section class="carrossel">
+        <h2 class="carrossel__titulo">Mais vendidos</h2>
+        <div class="swiper">
+            <!-- If we need pagination -->
+            <div class="swiper-pagination"></div>
+            <!-- Additional required wrapper -->
+            <div class="swiper-wrapper">
+                <!-- Slides -->
+                <div class="swiper-slide"><img src="img/Portugol.png" alt="Livro sobre lógica de programação"></div>
+                <div class="swiper-slide"><img src="img/Javascript.png" alt="Livro sobre JavaScript"></div>
+                <div class="swiper-slide"><img src="img/Liderança.png" alt="Livro sobre liderança em design"></div>
+                <div class="swiper-slide"><img src="img/Guia Front-end.png" alt="Livro sobre guia Front-end"></div>
+                <div class="swiper-slide"><img src="img/ApacheKafka.png" alt="Livro sobre apache kafka e spring boot">
+                </div>
+                <div class="swiper-slide"><img src="img/Acessibilidade.png" alt="Livro sobre acessibliade web"></div>
+            </div>
+            <!-- If we need navigation buttons -->
+            <div class="swiper-button-prev"></div>
+            <div class="swiper-button-next"></div>
+        </div>
+
+        <div class="card">
+            <!-- 1° linha -->
+            <div class="card__descricao">
+                <!-- 1° coluna -->
+                <div class="descricao">
+                    <h3 class="descricao__titulo">Autora do Mês</h3>
+                    <h2 class="descricao__titulo-livro">Juliana Agarikov</h2>
+                    <p class="descricao__texto">Analista de sistemas e escritora, Juliana é especialista em Front-End.</p>
+                </div>
+                <!-- 2° coluna -->
+                <img class="descricao__imagem" src="img/Perfil-escritora 1-1.png" alt="Icone do Angular">
+            </div>
+            <!-- 2° linha -->
+            <div class="card__botoes">
+                <!-- 1° coluna -->
+                <ul class="botoes">
+                    <li class="botoes__item"><img src="img/Favoritos.svg" alt="Favoritar livro"></li>
+                    <li class="botoes__item"><img src="img/Compras.svg" alt="Adicionar no carrinho de compras"></li>
+                </ul>
+                <a class="botoes__ancora"href="#">Saiba mais</a>
+            </div>
+        </div>
+
+    </section>
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
     <script>
