--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <input type="search" class="banner__pesquisa" placeholder="Qual será sua próxima leitura?">
     </section>
 
-    <section class="carrossel">
+    <section class="carrossel">  
         <h2 class="carrossel__titulo">Últimos lançamentos</h2>
         <div class="swiper">
             <!-- If we need pagination -->
@@ -128,6 +128,7 @@
             <div class="card__descricao">
                 <!-- 1° coluna -->
                 <div class="descricao">
+                    <img src="img/Estrelinhas.png" alt="Estrelinhas">
                     <h3 class="descricao__titulo">Autora do Mês</h3>
                     <h2 class="descricao__titulo-livro">Juliana Agarikov</h2>
                     <p class="descricao__texto">Analista de sistemas e escritora, Juliana é especialista em Front-End.</p>
