--- a/index.html
+++ b/index.html
@@ -149,6 +149,20 @@
 
     </section>
 
+    <section class="teste">
+        <h2 class="teste__titulo" ></h2>TÓPICOS VISITADOS RECENTEMENTE</h2>
+       <ul class="teste__item">
+            <a href="#" class="teste__link">Android</a>
+            <a href="#" class="teste__link">Marketing Digital</a>
+            <a href="#" class="teste__link">Agile</a>
+            <a href="#" class="teste__link">Startups</a>
+            <a href="#" class="teste__link">HTML & CSS</a>
+            <a href="#" class="teste__link">Python</a>
+            <a href="#" class="teste__link">OO</a>
+            <a href="#" class="teste__link">Java</a>
+       </ul> 
+    </section>
+
     <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
     <script>
         const swiper = new Swiper('.swiper', {
