terminando o layout mobile

--- a/index.html
+++ b/index.html
@@ -149,19 +149,47 @@
 
     </section>
 
-    <section class="teste">
-        <h2 class="teste__titulo" ></h2>TÓPICOS VISITADOS RECENTEMENTE</h2>
-       <ul class="teste__item">
-            <a href="#" class="teste__link">Android</a>
-            <a href="#" class="teste__link">Marketing Digital</a>
-            <a href="#" class="teste__link">Agile</a>
-            <a href="#" class="teste__link">Startups</a>
-            <a href="#" class="teste__link">HTML & CSS</a>
-            <a href="#" class="teste__link">Python</a>
-            <a href="#" class="teste__link">OO</a>
-            <a href="#" class="teste__link">Java</a>
+    <section class="topicos">
+        <h2 class="topicos__titulo">TÓPICOS VISITADOS RECENTEMENTE</h2>
+       <ul class="topicos__lista">
+            <li class="topicos__item">
+                <a href="#" class="topicos__link">Android</a>
+            </li>
+            <li class="topicos__item">
+                <a href="#" class="topicos__link">Marketing Digital</a>
+            </li>
+            <li class="topicos__item">
+                <a href="#" class="topicos__link">Agile</a>
+            </li>
+            <li class="topicos__item">
+                <a href="#" class="topicos__link">Startups</a>
+            </li>
+            <li class="topicos__item">
+                <a href="#" class="topicos__link">HTML & CSS</a>
+            </li>
+            <li class="topicos__item">
+                <a href="#" class="topicos__link">Python</a>
+            </li>
+            <li class="topicos__item">
+                <a href="#" class="topicos__link">OO</a>
+            </li>
+            <li class="topicos__item">
+                <a href="#" class="topicos__link">Java</a>
+            </li>
        </ul> 
     </section>
+
+    <section class="contato">
+      <h2 class="contato__titulo">Fique por dentro das novidades!</h2>
+      <p class="contato__texto">Atualizações de e-books, novos livros, promoções e outro</p>
+      <input type="email" class="contato__email" placeholder="Cadastre seu e-mail">
+    </section>
+
+    <hr>
+
+    <footer class="rodape">
+        <h2 class="rodape__titulo">Grupo Alura</h2>
+    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
     <script>
