--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alurabook</title>
     <link rel="stylesheet" href="reset.css">
-    <link
-        href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Poppins:wght@300;400;500;700&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Poppins:wght@300;400;500;700&display=swap"rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Josefin+Sans:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css" />
     <link rel="stylesheet" href="style.css">
 </head>
@@ -21,8 +20,36 @@
             <label for="menu">
                 <span class="cabecalho__menu-hamburguer container__imagem"></span>
             </label>
+                <ul class="lista-menu">
+                    <li class="lista-menu__titulo">Categorias</li>
+                    <li class="lista-menu__item">
+                        <a href="#" class="lista-menu__link">Programação</a>
+                    </li>
+                    <li class="lista-menu__item">
+                        <a href="#" class="lista-menu__link">Front-end</a>
+                    </li>
+                    <li class="lista-menu__item">
+                        <a href="#" class="lista-menu__link">Infraestrutura</a>
+                    </li>
+                    <li class="lista-menu__item">
+                        <a href="#" class="lista-menu__link">Bussines</a>
+                    </li>
+                    <li class="lista-menu__item">
+                        <a href="#" class="lista-menu__link">Design & UX</a>
+                    </li>
+                </ul>
+
+            <img src="img/Logo.svg" alt="Logo da Alurabook" class="container__imagem">
+            <h1 class="container__titulo"><b class="container__titulo--negrito">Alura</b>Books</h1>
+        </div>
+
+        <ul class="opcoes">
+            <input type="checkbox" id="opcoes-menu" class="opcoes__botao">
+            <label for="opcoes-menu">
+            <li class="opcoes__item opcoes__item-ativo">Categorias</li>
+            </label>
+
             <ul class="lista-menu">
-                <li class="lista-menu__titulo">Categorias</li>
                 <li class="lista-menu__item">
                     <a href="#" class="lista-menu__link">Programação</a>
                 </li>
@@ -40,10 +67,12 @@
                 </li>
             </ul>
 
-            <img src="img/Logo.svg" alt="Logo da Alurabook" class="container__imagem">
-        </div>
+            <li class="opcoes__item"><a href="#" class="opcoes__link">Favoritos</a></li>
+            <li class="opcoes__item"><a href="#" class="opcoes__link">Minha estante</a></li>
+        </ul>
+
         <div class="container">
-            <a href="#"><img src="img/Favoritos.svg" alt="Meus favoritos" class="container__imagem"></a>
+            <a href="#"><img src="img/Favoritos.svg" alt="Meus favoritos" class="container__imagem container__imagem-transparente"></a>
             <a href="#"><img src="img/Compras.svg" alt="Carrinho de compras" class="container__imagem"></a>
             <a href="#"><img src="img/Usuário.svg" alt="Meu perfil" class="container__imagem"></a>
         </div>
@@ -55,7 +84,7 @@
         <input type="search" class="banner__pesquisa" placeholder="Qual será sua próxima leitura?">
     </section>
 
-    <section class="carrossel">  
+    <section class="carrossel">
         <h2 class="carrossel__titulo">Últimos lançamentos</h2>
         <div class="swiper">
             <!-- If we need pagination -->
@@ -95,7 +124,7 @@
                     <li class="botoes__item"><img src="img/Favoritos.svg" alt="Favoritar livro"></li>
                     <li class="botoes__item"><img src="img/Compras.svg" alt="Adicionar no carrinho de compras"></li>
                 </ul>
-                <a class="botoes__ancora"href="#">Saiba mais</a>
+                <a class="botoes__ancora" href="#">Saiba mais</a>
             </div>
         </div>
 
@@ -131,7 +160,8 @@
                     <img src="img/Estrelinhas.png" alt="Estrelinhas">
                     <h3 class="descricao__titulo">Autora do Mês</h3>
                     <h2 class="descricao__titulo-livro">Juliana Agarikov</h2>
-                    <p class="descricao__texto">Analista de sistemas e escritora, Juliana é especialista em Front-End.</p>
+                    <p class="descricao__texto">Analista de sistemas e escritora, Juliana é especialista em Front-End.
+                    </p>
                 </div>
                 <!-- 2° coluna -->
                 <img class="descricao__imagem" src="img/Perfil-escritora 1-1.png" alt="Icone do Angular">
@@ -143,7 +173,7 @@
                     <li class="botoes__item"><img src="img/Favoritos.svg" alt="Favoritar livro"></li>
                     <li class="botoes__item"><img src="img/Compras.svg" alt="Adicionar no carrinho de compras"></li>
                 </ul>
-                <a class="botoes__ancora"href="#">Saiba mais</a>
+                <a class="botoes__ancora" href="#">Saiba mais</a>
             </div>
         </div>
 
@@ -151,7 +181,7 @@
 
     <section class="topicos">
         <h2 class="topicos__titulo">TÓPICOS VISITADOS RECENTEMENTE</h2>
-       <ul class="topicos__lista">
+        <ul class="topicos__lista">
             <li class="topicos__item">
                 <a href="#" class="topicos__link">Android</a>
             </li>
@@ -176,13 +206,13 @@
             <li class="topicos__item">
                 <a href="#" class="topicos__link">Java</a>
             </li>
-       </ul> 
+        </ul>
     </section>
 
     <section class="contato">
-      <h2 class="contato__titulo">Fique por dentro das novidades!</h2>
-      <p class="contato__texto">Atualizações de e-books, novos livros, promoções e outro</p>
-      <input type="email" class="contato__email" placeholder="Cadastre seu e-mail">
+        <h2 class="contato__titulo">Fique por dentro das novidades!</h2>
+        <p class="contato__texto">Atualizações de e-books, novos livros, promoções e outro</p>
+        <input type="email" class="contato__email" placeholder="Cadastre seu e-mail">
     </section>
 
     <hr>
