--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header class="cabecalho">
         <div class="container">
             <input type="checkbox" id="menu" class="container__botao">
-            <label for="menu">
+            <label for="menu" class="container__rotulo">
                 <span class="cabecalho__menu-hamburguer container__imagem"></span>
             </label>
                 <ul class="lista-menu">
@@ -45,7 +45,7 @@
 
         <ul class="opcoes">
             <input type="checkbox" id="opcoes-menu" class="opcoes__botao">
-            <label for="opcoes-menu">
+            <label for="opcoes-menu" class="opcoes__rotulo">
             <li class="opcoes__item opcoes__item-ativo">Categorias</li>
             </label>
 
@@ -72,9 +72,17 @@
         </ul>
 
         <div class="container">
-            <a href="#"><img src="img/Favoritos.svg" alt="Meus favoritos" class="container__imagem container__imagem-transparente"></a>
-            <a href="#"><img src="img/Compras.svg" alt="Carrinho de compras" class="container__imagem"></a>
-            <a href="#"><img src="img/Usuário.svg" alt="Meu perfil" class="container__imagem"></a>
+            <a href="#">
+                <img src="img/Favoritos.svg" alt="Meus favoritos" class="container__imagem container__imagem-transparente">
+            </a>
+            <a href="#" class="container__link">
+                <img src="img/Compras.svg" alt="Carrinho de compras" class="container__imagem">
+                <p class="container__texto">Minha sacola</p>
+            </a>
+            <a href="#" class="container__link">
+                <img src="img/Usuário.svg" alt="Meu perfil" class="container__imagem">
+                <p class="container__texto">Meu perfil</p>
+            </a>
         </div>
     </header>
 
@@ -86,97 +94,96 @@
 
     <section class="carrossel">
         <h2 class="carrossel__titulo">Últimos lançamentos</h2>
-        <div class="swiper">
-            <!-- If we need pagination -->
-            <div class="swiper-pagination"></div>
-            <!-- Additional required wrapper -->
-            <div class="swiper-wrapper">
-                <!-- Slides -->
-                <div class="swiper-slide"><img src="img/Portugol.png" alt="Livro sobre lógica de programação"></div>
-                <div class="swiper-slide"><img src="img/Javascript.png" alt="Livro sobre JavaScript"></div>
-                <div class="swiper-slide"><img src="img/Liderança.png" alt="Livro sobre liderança em design"></div>
-                <div class="swiper-slide"><img src="img/Guia Front-end.png" alt="Livro sobre guia Front-end"></div>
-                <div class="swiper-slide"><img src="img/ApacheKafka.png" alt="Livro sobre apache kafka e spring boot">
+        <div class="carrossel__container">
+            <div class="swiper">
+                <!-- If we need pagination -->
+                <div class="swiper-pagination"></div>
+                <!-- Additional required wrapper -->
+                <div class="swiper-wrapper">
+                    <!-- Slides -->
+                    <div class="swiper-slide"><img src="img/Portugol.png" alt="Livro sobre lógica de programação"></div>
+                    <div class="swiper-slide"><img src="img/Javascript.png" alt="Livro sobre JavaScript"></div>
+                    <div class="swiper-slide"><img src="img/Liderança.png" alt="Livro sobre liderança em design"></div>
+                    <div class="swiper-slide"><img src="img/Guia Front-end.png" alt="Livro sobre guia Front-end"></div>
+                    <div class="swiper-slide"><img src="img/ApacheKafka.png" alt="Livro sobre apache kafka e spring boot">
+                    </div>
+                    <div class="swiper-slide"><img src="img/Acessibilidade.png" alt="Livro sobre acessibliade web"></div>
                 </div>
-                <div class="swiper-slide"><img src="img/Acessibilidade.png" alt="Livro sobre acessibliade web"></div>
+                <!-- If we need navigation buttons -->
+                <div class="swiper-button-prev"></div>
+                <div class="swiper-button-next"></div>
             </div>
-            <!-- If we need navigation buttons -->
-            <div class="swiper-button-prev"></div>
-            <div class="swiper-button-next"></div>
-        </div>
-
-        <div class="card">
-            <!-- 1° linha -->
-            <div class="card__descricao">
-                <!-- 1° coluna -->
-                <div class="descricao">
-                    <h3 class="descricao__titulo">Talvez você também se interesse por...</h3>
-                    <h2 class="descricao__titulo-livro">Angular 11 e Firebase</h2>
-                    <p class="descricao__texto">Construindo uma aplicação integrada com a plataforma do Google.</p>
+            <div class="card">
+                <!-- 1° linha -->
+                <div class="card__descricao">
+                    <!-- 1° coluna -->
+                    <div class="descricao">
+                        <h3 class="descricao__titulo">Talvez você também se interesse por...</h3>
+                        <h2 class="descricao__titulo-livro">Angular 11 e Firebase</h2>
+                        <p class="descricao__texto">Construindo uma aplicação integrada com a plataforma do Google.</p>
+                    </div>
+                    <!-- 2° coluna -->
+                    <img class="descricao__imagem" src="img/Angular.png" alt="Icone do Angular">
                 </div>
-                <!-- 2° coluna -->
-                <img class="descricao__imagem" src="img/Angular.png" alt="Icone do Angular">
+                <!-- 2° linha -->
+                <div class="card__botoes">
+                    <!-- 1° coluna -->
+                    <ul class="botoes">
+                        <li class="botoes__item"><img src="img/Favoritos.svg" alt="Favoritar livro"></li>
+                        <li class="botoes__item"><img src="img/Compras.svg" alt="Adicionar no carrinho de compras"></li>
+                    </ul>
+                    <a class="botoes__ancora" href="#">Saiba mais</a>
+                </div>
             </div>
-            <!-- 2° linha -->
-            <div class="card__botoes">
-                <!-- 1° coluna -->
-                <ul class="botoes">
-                    <li class="botoes__item"><img src="img/Favoritos.svg" alt="Favoritar livro"></li>
-                    <li class="botoes__item"><img src="img/Compras.svg" alt="Adicionar no carrinho de compras"></li>
-                </ul>
-                <a class="botoes__ancora" href="#">Saiba mais</a>
-            </div>
-        </div>
-
+        </div>  
     </section>
-
 
     <section class="carrossel">
         <h2 class="carrossel__titulo">Mais vendidos</h2>
-        <div class="swiper">
-            <!-- If we need pagination -->
-            <div class="swiper-pagination"></div>
-            <!-- Additional required wrapper -->
-            <div class="swiper-wrapper">
-                <!-- Slides -->
-                <div class="swiper-slide"><img src="img/Portugol.png" alt="Livro sobre lógica de programação"></div>
-                <div class="swiper-slide"><img src="img/Javascript.png" alt="Livro sobre JavaScript"></div>
-                <div class="swiper-slide"><img src="img/Liderança.png" alt="Livro sobre liderança em design"></div>
-                <div class="swiper-slide"><img src="img/Guia Front-end.png" alt="Livro sobre guia Front-end"></div>
-                <div class="swiper-slide"><img src="img/ApacheKafka.png" alt="Livro sobre apache kafka e spring boot">
+        <div class="carrossel__container">
+            <div class="swiper">
+                <!-- If we need pagination -->
+                <div class="swiper-pagination"></div>
+                <!-- Additional required wrapper -->
+                <div class="swiper-wrapper">
+                    <!-- Slides -->
+                    <div class="swiper-slide"><img src="img/Portugol.png" alt="Livro sobre lógica de programação"></div>
+                    <div class="swiper-slide"><img src="img/Javascript.png" alt="Livro sobre JavaScript"></div>
+                    <div class="swiper-slide"><img src="img/Liderança.png" alt="Livro sobre liderança em design"></div>
+                    <div class="swiper-slide"><img src="img/Guia Front-end.png" alt="Livro sobre guia Front-end"></div>
+                    <div class="swiper-slide"><img src="img/ApacheKafka.png" alt="Livro sobre apache kafka e spring boot">
+                    </div>
+                    <div class="swiper-slide"><img src="img/Acessibilidade.png" alt="Livro sobre acessibliade web"></div>
                 </div>
-                <div class="swiper-slide"><img src="img/Acessibilidade.png" alt="Livro sobre acessibliade web"></div>
+                <!-- If we need navigation buttons -->
+                <div class="swiper-button-prev"></div>
+                <div class="swiper-button-next"></div>
             </div>
-            <!-- If we need navigation buttons -->
-            <div class="swiper-button-prev"></div>
-            <div class="swiper-button-next"></div>
-        </div>
-
-        <div class="card">
-            <!-- 1° linha -->
-            <div class="card__descricao">
-                <!-- 1° coluna -->
-                <div class="descricao">
-                    <img src="img/Estrelinhas.png" alt="Estrelinhas">
-                    <h3 class="descricao__titulo">Autora do Mês</h3>
-                    <h2 class="descricao__titulo-livro">Juliana Agarikov</h2>
-                    <p class="descricao__texto">Analista de sistemas e escritora, Juliana é especialista em Front-End.
-                    </p>
+            <div class="card">
+                <!-- 1° linha -->
+                <div class="card__descricao">
+                    <!-- 1° coluna -->
+                    <div class="descricao">
+                        <img src="img/Estrelinhas.png" alt="Estrelinhas">
+                        <h3 class="descricao__titulo">Autora do Mês</h3>
+                        <h2 class="descricao__titulo-livro">Juliana Agarikov</h2>
+                        <p class="descricao__texto">Analista de sistemas e escritora, Juliana é especialista em Front-End.
+                        </p>
+                    </div>
+                    <!-- 2° coluna -->
+                    <img class="descricao__imagem" src="img/Perfil-escritora 1-1.png" alt="Icone do Angular">
                 </div>
-                <!-- 2° coluna -->
-                <img class="descricao__imagem" src="img/Perfil-escritora 1-1.png" alt="Icone do Angular">
-            </div>
-            <!-- 2° linha -->
-            <div class="card__botoes">
-                <!-- 1° coluna -->
-                <ul class="botoes">
-                    <li class="botoes__item"><img src="img/Favoritos.svg" alt="Favoritar livro"></li>
-                    <li class="botoes__item"><img src="img/Compras.svg" alt="Adicionar no carrinho de compras"></li>
-                </ul>
-                <a class="botoes__ancora" href="#">Saiba mais</a>
+                <!-- 2° linha -->
+                <div class="card__botoes">
+                    <!-- 1° coluna -->
+                    <ul class="botoes">
+                        <li class="botoes__item"><img src="img/Favoritos.svg" alt="Favoritar livro"></li>
+                        <li class="botoes__item"><img src="img/Compras.svg" alt="Adicionar no carrinho de compras"></li>
+                    </ul>
+                    <a class="botoes__ancora" href="#">Saiba mais</a>
+                </div>
             </div>
         </div>
-
     </section>
 
     <section class="topicos">
